@@ -1,12 +1,12 @@
-from lyn import Lightning, word_t, Register
+from lyn import *
 
 with Lightning() as lib:
     with lib.state() as jit:
         jit.prolog()
-        jit.getarg(Register.r0, jit.arg())
-        jit.getarg(Register.r1, jit.arg())
-        jit.mulr(Register.r0, Register.r0, Register.r1)
-        jit.retr(Register.r0)
+        jit.getarg(R0, jit.arg())
+        jit.getarg(R1, jit.arg())
+        jit.mulr(R0, R0, R1)
+        jit.retr(R0)
         jit.epilog()
 
         mul = jit.emit_function(word_t, [word_t, word_t])
