@@ -17,12 +17,46 @@ from .lyn import (
     wordsize,
 )
 
-from .registers import Register
+from .registers import (
+    F0,
+    F1,
+    F2,
+    F3,
+    F4,
+    F5,
+    F6,
+    F7,
+    R0,
+    R1,
+    R2,
+    R3,
+    Register,
+    V0,
+    V1,
+    V2,
+    V3,
+)
 
 __all__ = [
+    "F0",
+    "F1",
+    "F2",
+    "F3",
+    "F4",
+    "F5",
+    "F6",
+    "F7",
     "Lightning",
+    "R0",
+    "R1",
+    "R2",
+    "R3",
     "Register",
     "State",
+    "V0",
+    "V1",
+    "V2",
+    "V3",
     "char_p",
     "word_t",
     "wordsize",
